Work being done on the twitter API call

--- a/client/layout/applicationLayout.html
+++ b/client/layout/applicationLayout.html
@@ -15,7 +15,7 @@
     <div id="header" class="container">
       <div id="logo">
             <span class="icon icon-cog"></span>
-        <h1><a href="/">PolitiApp</a></h1>
+        <h1><a href="/">PolitiDash</a></h1>
       </div>
       <div id="menu">
         <ul>
