Minor adjustments made to client interface, api call on server side working correctly

--- a/client/layout/applicationLayout.html
+++ b/client/layout/applicationLayout.html
@@ -2,7 +2,7 @@
 <template name="ApplicationLayout">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>PoltiDash</title>
+    <title>Polis</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div id="header" class="container">
       <div id="logo">
             <span class="icon icon-cog"></span>
-        <h1><a href="/">PolitiDash</a></h1>
+        <h1><a href="/">Polis</a></h1>
       </div>
       <div id="menu">
         <ul>
@@ -52,7 +52,7 @@
   </div>
 
   <div id="copyright">
-    <p>&copy; PolitiDash. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    <p>&copy; Polis. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
     <ul class="contact">
       <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
       <li><a href="#" class="icon icon-facebook"><span></span></a></li>
