made client-side cosmetic adjustments

--- a/client/layout/applicationLayout.html
+++ b/client/layout/applicationLayout.html
@@ -34,18 +34,18 @@
   <div id="footer">
     <div class="container">
       <div class="fbox1">
-      <span class="icon icon-map-marker"></span>
+      <!-- <span class="icon icon-map-marker"></span> -->
         <span>1234 Fictional Road Suite #789
         <br />Austin TX, 78741</span>
       </div>
       <div class="fbox1">
-        <span class="icon icon-phone"></span>
+        <!-- <span class="icon icon-phone"></span> -->
         <span>
           Telephone: +1 800 123 4657
         </span>
       </div>
       <div class="fbox1">
-        <span class="icon icon-envelope"></span>
+        <!-- <span class="icon icon-envelope"></span> -->
         <span>businessname@business.com</span>
       </div>
     </div>
@@ -53,13 +53,13 @@
 
   <div id="copyright">
     <p>&copy; Polis. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
-    <ul class="contact">
+<!--     <ul class="contact">
       <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
       <li><a href="#" class="icon icon-facebook"><span></span></a></li>
       <li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
       <li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
       <li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-    </ul>
+    </ul> -->
   </div>
 </template>
 
