Logo finalized and added

--- a/client/layout/applicationLayout.html
+++ b/client/layout/applicationLayout.html
@@ -2,20 +2,24 @@
 <template name="ApplicationLayout">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Polis</title>
+    <title>polis</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
     <link href="default.css" rel="stylesheet" type="text/css" media="all" />
     <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+
 
     <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
   </head>
   <div id="header-wrapper">
     <div id="header" class="container">
       <div id="logo">
-            <span class="icon icon-cog"></span>
-        <h1><a href="/">Polis</a></h1>
+          <div style="color:white">
+            <i class="fas fa-university fa-6x"></i>
+          </div>
+        <h1><a href="/">polis</a></h1>
       </div>
       <div id="menu">
         <ul>
@@ -34,25 +38,22 @@
   <div id="footer">
     <div class="container">
       <div class="fbox1">
-      <!-- <span class="icon icon-map-marker"></span> -->
         <span>1234 Fictional Road Suite #789
         <br />Austin TX, 78741</span>
       </div>
       <div class="fbox1">
-        <!-- <span class="icon icon-phone"></span> -->
         <span>
           Telephone: +1 800 123 4657
         </span>
       </div>
       <div class="fbox1">
-        <!-- <span class="icon icon-envelope"></span> -->
-        <span>businessname@business.com</span>
+        <span>Email: <a href="mailto:jcdiaz1201@gmail.com"><span class="label">jcdiaz1201<i class="fa fa-at"></i>gmail.com</span></a></span>
       </div>
     </div>
   </div>
 
   <div id="copyright">
-    <p>&copy; Polis. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    <p>&copy; polis. All rights reserved. | Created by <a href="https://github.com/JDjedi">Jonathan Diaz</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 <!--     <ul class="contact">
       <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
       <li><a href="#" class="icon icon-facebook"><span></span></a></li>
