Project is largely complete, updated profile pic size

--- a/client/legislative/legislative.css
+++ b/client/legislative/legislative.css
@@ -197,6 +197,10 @@
 		width: auto;
 	}
 
+	.profile-image {
+		border-radius: 50%;
+	}
+
 /*********************************************************************************/
 /* List Styles                                                                   */
 /*********************************************************************************/
